# Cosmotheka

./: .flake8  .gitignore  .readthedocs.yaml  README.md  collect_jks.py  environment.yml  pyproject.toml  requirements.txt  run_cls.py  run_cls.slurm  run_cls_mpi.py  run_cov_job.py  run_cwsp_batch.py  setup.py  setup_jks.py
docs/: README.md  modules.rst  run_cls.rst  xcell.cls.rst  xcell.mappers.rst  xcell.rst  xcell.tests.rst
examples/: check_two_outputs.ipynb
input/: 2MPZ.yml  ACTBN__CMB.yml  ACTBN__kappa.yml  ACTBN__tSZ.yml  ACTCMB.yml  ACTCMB_BN.yml  ACTCMB_D56.yml  ACTCMB__BN.yml  ACTD56__CMB.yml  ACTD56__kappa.yml  ACTD56__tSZ.yml  ACTDR6__kappa.yml  ACTDR6__tSZ.yml  ACTk.yml  ACTk_BN.yml  ACTk_D56.yml  ACTk__D56.yml  ACTtSZ.yml  ACTtSZ_BN.yml  ACTtSZ_D56.yml  ACTtSZ__D56.yml  BOSS.yml  BOSS_CMASS.yml  CATWISE.yml  CIBLenz__353.yml  CIBLenz__545.yml  CIBLenz__857.yml  CIB_Lenz.yml  CIB_Lenz_353.yml  CIB_Lenz_545.yml  CIB_Lenz_857.yml  CMASS_vort_DELS.yml  CatWISE.yml  DELS_0.yml  DELS_1.yml  DELS_2.yml  DELS_3.yml  DELS_KiDS1000_eBOSS_P18CMBK.yml  DELS__1.yml  DESI_LRG_Zhou23__0.yml  (+84 more)
mappers/: Test_CMBK.ipynb  Test_COV.ipynb  Test_DES.ipynb  Test_DESgc.ipynb  Test_DESwl.ipynb  Test_KV450.ipynb  Test_QSO.ipynb  Test_mapper.ipynb  __init__.py  get_4096.py  get_DESgc_4096.py  get_KV_4096.py  make_DESwl_lite.py  make_DESwl_lite_hand.py  mapper_CMBK.py  mapper_DES.py  mapper_DESgc.py  mapper_DESwl.py  mapper_DESwl_Carlos.py  mapper_KV450.py  mapper_eBOSS_QSO.py
notebooks/: ACT_validation.ipynb  ACT_validation_og.ipynb  Fitting_b.ipynb  Planck_validation.ipynb  (+19 more)
(+365 files in other folders)
